@startuml Decorator Pattern - MVC Architecture
skinparam classAttributeIconSize 0
skinparam backgroundColor #FFFFFF
skinparam packageStyle rectangle

title Patrón Decorator Aplicado a Arquitectura MVC - Sistema de Control de Asistencia

  class VAlumno {
    + txtRegistro: EditText
    + txtApellidoP: EditText
    + txtNombre: EditText
    + txtApellidoM: EditText
    + btnGuardar: Button
    + btnAgregar: Button
    + lvAlumno: ListView
    + btnEliminar: Button
    --
    + mostrarAlumnos(): void
    + mostrarFormularioCrear(): void
    + limpiarFormulario(): void
    + mostrarFormularioEditar(): void
  }

  class CAlumno {
    - view: VAlumno
    - dataSource: AlumnoDataSource
    --
    + guardarAlumno(): void
    + obtenerAlumno(): void
    + actualizarAlumno(): void
    + eliminarAlumno(): void
    + cargarAlumno(): void
    + inicializar(): void
  }

  class MAlumno {
    + id: int
    + nombre: String
    + registro: String
    + apellidop: String
    + apellidom: String
    --
    + insertar(): boolean
    + {static} obtener(id: int): MAlumno
    + {static} listar(): List
    + actualizar(): boolean
    + eliminar(): boolean
  }
  
  class DBHelper {
    + DATABASE_NAME: String
    + DATABASE_VERSION: Int
    + TABLE_MATERIA: String
    + TABLE_GRUPO: String
    + TABLE_ESTUDIANTE: String
    + TABLE_CLASE: String
    + TABLE_QR_CODE: String
    + TABLE_ASISTENCIA: String
    --
    + onCreate(): void
    + onUpgrade(): void
    + close(): void
    + onOpen(): void
  }

package "Decorator Pattern" #FFE6E6 {
  
  ' ========== COMPONENTE (Interface) ==========
  interface AlumnoDataSource <<interface>> {
    + listar(): List<MAlumno>
    + obtener(registro: String): MAlumno?
    + insertar(alumno: MAlumno): Boolean
    + actualizar(alumno: MAlumno): Boolean
    + eliminar(alumno: MAlumno): Boolean
  }
  
  
  ' ========== COMPONENTE CONCRETO ==========
  class AlumnoSqliteDataSource {
    - context: Context
    --
    + AlumnoSqliteDataSource(context)
    + listar(): List<MAlumno>
    + obtener(registro: String): MAlumno?
    + insertar(alumno: MAlumno): Boolean
    + actualizar(alumno: MAlumno): Boolean
    + eliminar(alumno: MAlumno): Boolean
  }
  
  ' ========== DECORADOR BASE ==========
  abstract class AlumnoDataSourceDecorator {
    # wrappee: AlumnoDataSource
    --
    + AlumnoDataSourceDecorator(source: AlumnoDataSource)
    + listar(): List<MAlumno>
    + obtener(registro: String): MAlumno?
    + insertar(alumno: MAlumno): Boolean
    + actualizar(alumno: MAlumno): Boolean
    + eliminar(alumno: MAlumno): Boolean
  }
  
  ' ========== DECORADORES CONCRETOS ==========
  class EncryptionDecorator {
    + listar(): List<MAlumno>
    + obtener(registro: String): MAlumno?
    + insertar(alumno: MAlumno): Boolean
    + actualizar(alumno: MAlumno): Boolean
    + eliminar(alumno: MAlumno): Boolean
    --
    - encrypt(alumno: MAlumno): MAlumno
    - decrypt(alumno: MAlumno): MAlumno
    - encryptString(value: String): String
    - decryptString(value: String): String
  }
  
  class CompressionDecorator {
    + listar(): List<MAlumno>
    + obtener(registro: String): MAlumno?
    + insertar(alumno: MAlumno): Boolean
    + actualizar(alumno: MAlumno): Boolean
    + eliminar(alumno: MAlumno): Boolean
    --
    - compress(alumno: MAlumno): MAlumno
    - decompress(alumno: MAlumno): MAlumno
    - compressString(value: String): String
    - decompressString(value: String): String
  }
  
  
  ' Relaciones del Patrón Decorator
  AlumnoDataSource <|.. AlumnoSqliteDataSource
  AlumnoDataSource <|.. AlumnoDataSourceDecorator
  AlumnoDataSourceDecorator <|-- EncryptionDecorator
  AlumnoDataSourceDecorator <|-- CompressionDecorator
  AlumnoDataSourceDecorator o-right-> AlumnoDataSource
}

  class AlumnoActivity {
    - view: VAlumno
    - controller: CAlumno
    --
    + onCreate(savedInstanceState: Bundle): void
  }
  

' ========== RELACIONES MVC ==========
AlumnoActivity --> VAlumno 
AlumnoActivity --> CAlumno  
AlumnoActivity ..> AlumnoDataSource 

CAlumno --> VAlumno 
CAlumno --> AlumnoDataSource 
CAlumno ..> MAlumno 

AlumnoSqliteDataSource ..> MAlumno
MAlumno ..> DBHelper
